# UR5e_Grasp

./: .gitignore
src/llm_task_executor/: CMakeLists.txt  package.xml
src/llm_task_executor/config/: boxes.yaml
src/llm_task_executor/launch/: executor.launch.py
src/llm_task_executor/src/: task_executor_node.cpp
src/ollama_ros_bridge/: package.xml  setup.cfg  setup.py
src/ollama_ros_bridge/ollama_ros_bridge/: llm_control_node.py
src/ur5e_gripper_control/: CMakeLists.txt
src/ur5e_gripper_control/include/ur5e_gripper_control/: ur5e_gripper.h
src/ur5e_gripper_control/src/: ur5e_gripper.cpp
src/ur5e_gripper_moveit_config/launch/: ur5e_gripper_moveit.launch.py
src/ur5e_test_tools/: CMakeLists.txt  package.xml
src/ur5e_test_tools/resource/: target_record.yaml
src/ur5e_test_tools/src/: end_effector_pose.cpp  manual_control.cpp
src/vision/vision/: obj_detect.py
tutorial/: about _this_project.md
